--- a/pages/index.html
+++ b/pages/index.html
@@ -11,7 +11,7 @@
     <div class="row">
         <div class="col-md-4 offset-md-4 mt-3">
             <div class="card py-3">
-                <h1 class="text-success">Elastic Beanstalk</h1>
+                <h1 class="text-success">EC2</h1>
                 <img src="/myphoto.jpg" class="img-fluid" alt="">
                 <h3>Husain Ansari</h3>
                 <div>
